tests/samples/positive/visibility/visibility_import.ax
module visibility_import;

import samplelib.visibility;

fn main() -> i32 {
    let value: PublicInt = exported(answer);
    let box = make_box(value);
    let choice = PublicChoice_yes;
    if choice != PublicChoice.yes {
        return 1;
    }
    return box.value - 82;
}
